Bug 395401 - [evdev] Mouse settings are not loaded up at login
Summary: [evdev] Mouse settings are not loaded up at login
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_mouse (other bugs)
Version First Reported In: 5.13.0
Platform: Neon Linux
: VHI major
Target Milestone: ---
Assignee: Furkan Tokac
URL:
Keywords:
: 350240 380997 395541 395920 396532 397296 398004 398696 402345 403872 404448 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-06-14 23:54 UTC by Alex Ander
Modified: 2022-04-01 19:46 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Ander 2018-06-14 23:54:48 UTC
The bug is quite the same, as #26518
I just wasn't sure if I should open a new one or reopen the old one.

Quote from there, with a little changes:
The mouse settings set using KDE Control Center (Peripherals/Mouse)
are not applied after logging in via kdm.

The settings are properly saved in ~/.config/kcminputrc:
[Mouse]
Acceleration=2.5
MouseButtonMapping=LeftHanded
ReverseScrollPolarity=false
Threshold=4

and they work as expected immediately after changing the settings but after logout and login the mouse is back at the default behavior and you have to go to the control center and push the "Apply" button again to get the desired setup.
Important for me is "LeftHanded" flag.

I tried it with a new user and on another laptop - the bug persists.
Comment 1 Nate Graham 2018-06-15 02:50:03 UTC
...KDM? Does it work with SDDM? Libinput or evdev?
Comment 2 Alex Ander 2018-06-15 11:41:37 UTC
(In reply to Nate Graham from comment #1)
> ...KDM? Does it work with SDDM? Libinput or evdev?

I'm using KDE Neon with default input and DM libraries: evdev and SDDM.
Comment 3 Nate Graham 2018-06-15 12:36:58 UTC
Neon dev or Neon user?

Are you sure you don't have Libinput installed? Do you have xserver-xorg-input-libinput-hwe-16.04 installed?
Comment 4 Alex Ander 2018-06-15 15:57:35 UTC
(In reply to Nate Graham from comment #3)
> Neon dev or Neon user?
Neon User.
 
> Are you sure you don't have Libinput installed? Do you have
> xserver-xorg-input-libinput-hwe-16.04 installed?

I have libinput10 and libinput-bin, but xserver-xorg-input-evdev installed.
Comment 5 Nate Graham 2018-06-15 16:05:40 UTC
Ok, you're using evdev, then.
Comment 6 Alex Ander 2018-06-15 16:08:32 UTC
It's a two years old installation, which was regularly upgraded. This problem exists after the last big one, in Plasma 5.13.
Comment 7 Akshar Patel 2018-06-17 07:17:11 UTC
I can confirm this. I am having the same problem.
Comment 8 Akshar Patel 2018-06-17 14:56:19 UTC
Current Workaround can be found here till the bug gets resolved: https://askubuntu.com/questions/1047325/mouse-button-order-gets-reset-after-restart
Comment 9 Patrick Silva 2018-06-18 12:16:13 UTC
*** Bug 395541 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2018-06-28 13:07:15 UTC
*** Bug 395920 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2018-07-15 12:56:41 UTC
*** Bug 396532 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2018-08-09 17:49:04 UTC
*** Bug 397296 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2018-08-28 19:21:47 UTC
*** Bug 397971 has been marked as a duplicate of this bug. ***
Comment 14 Shawn Sörbom 2018-08-28 23:41:33 UTC
*** Bug 398004 has been marked as a duplicate of this bug. ***
Comment 15 Shawn Sörbom 2018-08-28 23:44:43 UTC
I should note that whatever is causing the settings to not be applied doesn't seem to affect kwin_wayland, at least as far as the left handed setting is concerned.
Comment 16 Shawn Sörbom 2018-09-06 18:41:50 UTC
Bug Still exists in Plasma 5.13.5, Applications 18.08.1
Comment 17 Roman Gilg 2018-09-12 17:29:36 UTC
Git commit a4c724173b5c6a59331587f2e5db746dffbabdc6 by Roman Gilg.
Committed on 12/09/2018 at 17:29.
Pushed by romangilg into branch 'master'.

[Mouse KCM] Avoid changes to touchpads in libinput backend

Summary:
Similar to evdev backend we need to ignore touchpad devices explicitly in the
libinput backend because these are also pointer devices.

XInput2 can do this in theory via input classes, but my touchpad did not set
the class correctly. So just switch to using XInput like in the evdev backend
to query all pointer devices and then use the XI_TOUCHPAD atom to filter out
touchpads.
Related: bug 395722, bug 396269

Test Plan: Manually

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: acrouthamel, ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D15256

M  +20   -12   kcms/mouse/backends/x11/x11_libinput_dummydevice.cpp

https://commits.kde.org/plasma-desktop/a4c724173b5c6a59331587f2e5db746dffbabdc6
Comment 18 Patrick Silva 2018-09-16 11:43:57 UTC
*** Bug 398696 has been marked as a duplicate of this bug. ***
Comment 19 Jacopo Torrini 2018-10-09 14:20:48 UTC
Bug still exists in Plasma 5.14.0
Comment 20 Jacopo Torrini 2018-10-09 14:25:31 UTC
(In reply to Jacopo Torrini from comment #19)
> Bug still exists in Plasma 5.14.0

Way to reproduce: open mouse system settings. Click the Invert scroll direction checkbox. Mouse whell scroll is reversed. Reboot. In mouse systemsettings checkbox is checked but mouse whell scroll is not reversed.
Comment 21 Nate Graham 2018-10-09 14:28:17 UTC
:(
Comment 22 Shawn Sörbom 2018-10-26 20:53:00 UTC
Bug still exists in Plasma 5.14.1
Comment 23 Shawn Sörbom 2018-10-27 17:03:44 UTC
Bug Still exists in 5.14.2
Comment 24 Lê Hoàng Phương 2018-11-05 07:01:39 UTC
> Way to reproduce: open mouse system settings. Click the Invert scroll direction checkbox. Mouse whell scroll is reversed. Reboot. In mouse systemsettings checkbox is checked but mouse whell scroll is not reversed.

Another way to reproduce:
My mouse is bluetooth usb mouse, pulling the receiver out then plugging it in will make its settings reset to default.
Comment 25 Shawn Sörbom 2018-11-30 19:23:12 UTC
Bug still exists in 5.14.4. Has there been any progress in tracking it down?
Comment 26 Nate Graham 2018-12-09 17:08:04 UTC
*** Bug 380997 has been marked as a duplicate of this bug. ***
Comment 27 Nate Graham 2018-12-09 17:09:22 UTC
*** Bug 350240 has been marked as a duplicate of this bug. ***
Comment 28 Nate Graham 2018-12-27 03:00:46 UTC
*** Bug 402345 has been marked as a duplicate of this bug. ***
Comment 29 Jacopo Torrini 2019-01-30 08:29:59 UTC
Bug still exists in 5.14.5. Any progress?
Comment 30 Nate Graham 2019-01-30 14:43:47 UTC
I'm afraid not. :(
Comment 31 Nate Graham 2019-02-05 20:11:33 UTC
*** Bug 403872 has been marked as a duplicate of this bug. ***
Comment 32 David Edmundson 2019-02-06 11:28:48 UTC
Git commit e8de7085371f263e445ffbfc3ca7b5be5a732fc8 by David Edmundson.
Committed on 06/02/2019 at 11:28.
Pushed by davidedmundson into branch 'Plasma/5.14'.

[kcms/mouse] Load current server settings in kcminit

Summary:
Without loading the current server status m_handed will remain
Handed::NotSupported;

EvdevSettings::load relies on various properties of X11EvdevBackend to
be initialised properly. When we load the settings from the config it'll
then save the fact that the server doesn't support setting which hand mouse to use as none was loaded - and assume that means we probably can't apply any setting.

Test Plan:
Ran in virtualbox (to get evdev used)
kcminit_startup was going into the right codepaths

Reviewers: #plasma, ngraham, mart

Reviewed By: #plasma, ngraham, mart

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18777

M  +1    -1    kcms/mouse/backends/x11/x11_evdev_backend.cpp

https://commits.kde.org/plasma-desktop/e8de7085371f263e445ffbfc3ca7b5be5a732fc8
Comment 33 Nate Graham 2019-02-18 22:21:30 UTC
*** Bug 404448 has been marked as a duplicate of this bug. ***