[kcms/mouse] Load current server settings in kcminit

Summary:
Without loading the current server status m_handed will remain
Handed::NotSupported;

EvdevSettings::load relies on various properties of X11EvdevBackend to
be initialised properly. When we load the settings from the config it'll
then save the fact that the server doesn't support setting which hand mouse to use as none was loaded - and assume that means we probably can't apply any setting.

BUG: 395401

Test Plan:
Ran in virtualbox (to get evdev used)
kcminit_startup was going into the right codepaths

Reviewers: #plasma, ngraham, mart

Reviewed By: #plasma, ngraham, mart

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18777